# cadenas

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
crates/rauth/: Cargo.toml
crates/rauth-axum/: Cargo.toml
crates/rauth-axum/src/: lib.rs
crates/rauth-core/: Cargo.toml
crates/rauth-core/src/: account.rs  auth.rs  config.rs  error.rs  lib.rs  mailer.rs  organization.rs  password.rs  plugin.rs  session.rs  storage.rs  time_provider.rs  token.rs  totp.rs  totp_codes.rs  user.rs  verification.rs
crates/rauth-oauth/: Cargo.toml
crates/rauth-oauth/src/: axum_router.rs  lib.rs
crates/rauth-organizations/: Cargo.toml
crates/rauth-organizations/src/: axum_router.rs  lib.rs
crates/rauth-rate-limit/: Cargo.toml
crates/rauth-rate-limit/src/: axum_layer.rs  lib.rs
crates/rauth-storage-sqlx/: Cargo.toml
crates/rauth-storage-sqlx/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/rauth-totp/: Cargo.toml
crates/rauth-totp/src/: axum_router.rs  lib.rs
crates/rauth/src/: lib.rs
examples/axum-sqlite/: Cargo.toml
examples/axum-sqlite/src/: main.rs
examples/full-app/: Cargo.toml  README.md
examples/full-app/src/: main.rs  notes.rs
examples/full-app/static/: index.html
examples/tanstack-auth/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
examples/tanstack-auth/src/: main.tsx  styles.css
