[workspace]
resolver = "2"
members = [
    "crates/rauth-core",
    "crates/rauth-storage-sqlx",
    "crates/rauth-axum",
    "crates/rauth-oauth",
    "crates/rauth-totp",
    "crates/rauth-organizations",
    "crates/rauth-rate-limit",
    "crates/rauth",
    "examples/axum-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/regigouale/cadenas"
authors = ["rauth contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Time / IDs
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
base32 = "0.5"
base64 = "0.22"
hex = "0.4"

# HTTP
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "macros", "query", "form"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# OAuth / HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

# DB
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "any", "uuid", "time", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
rauth-core = { path = "crates/rauth-core", version = "0.1.0" }
rauth-storage-sqlx = { path = "crates/rauth-storage-sqlx", version = "0.1.0" }
rauth-axum = { path = "crates/rauth-axum", version = "0.1.0" }
rauth-oauth = { path = "crates/rauth-oauth", version = "0.1.0" }
rauth-totp = { path = "crates/rauth-totp", version = "0.1.0" }
rauth-organizations = { path = "crates/rauth-organizations", version = "0.1.0" }
rauth-rate-limit = { path = "crates/rauth-rate-limit", version = "0.1.0" }
rauth = { path = "crates/rauth", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
