[package]
name = "rauth-core"
description = "Core types, traits and primitives for rauth (better-auth in Rust)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
sha1 = { workspace = true }
hmac.workspace = true
base32.workspace = true
subtle.workspace = true
base64.workspace = true
hex.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
futures.workspace = true

[features]
default = []
