[package]
name = "rauth-rate-limit"
description = "Rate limiting middleware and stores for rauth."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rauth-core.workspace = true
async-trait.workspace = true
time.workspace = true
tokio = { workspace = true }
http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
rauth-axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["axum"]
axum = ["dep:axum", "dep:rauth-axum", "dep:http", "dep:serde_json"]
