[package]
name = "rauth-totp"
description = "TOTP (RFC 6238) two-factor authentication plugin for rauth."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rauth-core.workspace = true
async-trait.workspace = true
serde.workspace = true
hmac.workspace = true
sha1 = { workspace = true }
base32.workspace = true
subtle.workspace = true
rand.workspace = true
time.workspace = true
url.workspace = true
